// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputButton it should render InputButton in after wrapper 1`] = `
.c2 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  cursor: pointer;
  box-sizing: border-box;
  border: none;
  border-radius: 6px;
  font-weight: 600;
  line-height: 1;
  text-align: center;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  text-transform: uppercase;
  height: calc(3 * var(--lendi-ui-size));
  padding: 0 var(--lendi-ui-size);
  font-size: calc(0.875 * var(--lendi-ui-size));
  -webkit-letter-spacing: calc(0.0625 * var(--lendi-ui-size));
  -moz-letter-spacing: calc(0.0625 * var(--lendi-ui-size));
  -ms-letter-spacing: calc(0.0625 * var(--lendi-ui-size));
  letter-spacing: calc(0.0625 * var(--lendi-ui-size));
  font-family: 'Open Sans',sans-serif;
  color: #ffffff;
  background-color: #00c0a5;
}

.c2:focus {
  outline: none;
  box-shadow: 0 3px 3px 0 rgba(0,0,0,0.1), 0 3px 4px 0 rgba(0,0,0,0.12), 0 1px 8px 0 rgba(0,0,0,0.14);
}

.c2:hover {
  box-shadow: 0 12px 17px 2px rgba(0,0,0,0.1), 0 5px 22px 4px rgba(0,0,0,0.12), 0 7px 8px 0 rgba(0,0,0,0.14);
}

.c2:active {
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.c2:focus {
  background-color: #32ccb7;
}

.c2:hover {
  background-color: #32ccb7;
}

.c2:active {
  background-color: #009984;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-right: var(--lendi-ui-size);
}

.c5 {
  margin-left: var(--lendi-ui-size);
}

.c1:focus {
  outline: 5px auto -webkit-focus-ring-color;
  opacity: 1;
  box-shadow: none;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1:active {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c6 .c0 {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  margin: 0 0 0 -1px;
}

.c7 .c0 {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  margin: 0 -1px 0 0;
}

<Styled(InputWithButton)
  size="md"
  variant="primary"
>
  <InputWithButton
    className="c0 c1"
    size="md"
    variant="primary"
  >
    <Styled(Button)
      className="c0 c1"
      size="md"
      variant="primary"
    >
      <Button
        className="c0 c1 "
        size="md"
        variant="primary"
      >
        <styled.button
          aria-label="search"
          className="c0 c1 "
          size="md"
          variant="primary"
        >
          <button
            aria-label="search"
            className="c0 c1 c2"
            size="md"
          >
            <styled.div>
              <div
                className="c3"
              >
                <styled.span
                  size="md"
                >
                  <span
                    className="c4"
                    size="md"
                  />
                </styled.span>
                <span>
                  search
                </span>
                <styled.span
                  size="md"
                >
                  <span
                    className="c5"
                    size="md"
                  />
                </styled.span>
              </div>
            </styled.div>
          </button>
        </styled.button>
      </Button>
    </Styled(Button)>
  </InputWithButton>
</Styled(InputWithButton)>
`;

exports[`InputButton it should render InputButton in before wrapper 1`] = `
.c2 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  cursor: pointer;
  box-sizing: border-box;
  border: none;
  border-radius: 6px;
  font-weight: 600;
  line-height: 1;
  text-align: center;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  text-transform: uppercase;
  height: calc(3 * var(--lendi-ui-size));
  padding: 0 var(--lendi-ui-size);
  font-size: calc(0.875 * var(--lendi-ui-size));
  -webkit-letter-spacing: calc(0.0625 * var(--lendi-ui-size));
  -moz-letter-spacing: calc(0.0625 * var(--lendi-ui-size));
  -ms-letter-spacing: calc(0.0625 * var(--lendi-ui-size));
  letter-spacing: calc(0.0625 * var(--lendi-ui-size));
  font-family: 'Open Sans',sans-serif;
  color: #ffffff;
  background-color: #00c0a5;
}

.c2:focus {
  outline: none;
  box-shadow: 0 3px 3px 0 rgba(0,0,0,0.1), 0 3px 4px 0 rgba(0,0,0,0.12), 0 1px 8px 0 rgba(0,0,0,0.14);
}

.c2:hover {
  box-shadow: 0 12px 17px 2px rgba(0,0,0,0.1), 0 5px 22px 4px rgba(0,0,0,0.12), 0 7px 8px 0 rgba(0,0,0,0.14);
}

.c2:active {
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.c2:focus {
  background-color: #32ccb7;
}

.c2:hover {
  background-color: #32ccb7;
}

.c2:active {
  background-color: #009984;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-right: var(--lendi-ui-size);
}

.c5 {
  margin-left: var(--lendi-ui-size);
}

.c1:focus {
  outline: 5px auto -webkit-focus-ring-color;
  opacity: 1;
  box-shadow: none;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1:active {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c6 .c0 {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  margin: 0 0 0 -1px;
}

<Styled(InputWithButton)
  size="md"
  variant="primary"
>
  <InputWithButton
    className="c0 c1"
    size="md"
    variant="primary"
  >
    <Styled(Button)
      className="c0 c1"
      size="md"
      variant="primary"
    >
      <Button
        className="c0 c1 "
        size="md"
        variant="primary"
      >
        <styled.button
          aria-label="search"
          className="c0 c1 "
          size="md"
          variant="primary"
        >
          <button
            aria-label="search"
            className="c0 c1 c2"
            size="md"
          >
            <styled.div>
              <div
                className="c3"
              >
                <styled.span
                  size="md"
                >
                  <span
                    className="c4"
                    size="md"
                  />
                </styled.span>
                <span>
                  search
                </span>
                <styled.span
                  size="md"
                >
                  <span
                    className="c5"
                    size="md"
                  />
                </styled.span>
              </div>
            </styled.div>
          </button>
        </styled.button>
      </Button>
    </Styled(Button)>
  </InputWithButton>
</Styled(InputWithButton)>
`;
